--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     <h1>Belajar JQuery!!!</h1>
     <div id="box1">Box 1</div>
 
-    <div class="boxes">Baris ke-1</div>
-    <div class="boxes">Baris ke-2</div>
-    <div class="boxes">Baris ke-3</div>
+    <div class="boxes-wrap">
+        <div class="boxes">Baris ke-1</div>
+        <div class="boxes">Baris ke-2</div>
+        <div class="boxes">Baris ke-3</div>
+    </div>
 
     <form>
         <input type="tel" id="inputText">
@@ -61,6 +63,17 @@
                 // menghentikan reload dari tag form
                 event.preventDefault()
             });
+
+            // var hello = '<p>hello world</p>'
+
+            // console.log($('form').html(hello));
+
+            //  ----- append & prepend | after & before -----
+            $('.boxes-wrap').append('<div>hello world</div>');
+            $('.boxes-wrap').prepend('<div>hello dunia</div>');
+
+            
+
         });
     </script>
 </body>
